Avone-myshopify-landing-page

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         <!-- Card collection -->
                         <div class="card border-0 card-collection overflow-hidden">
                             <!-- Background overlay-image -->
-                            <div class="overlay-image"
+                            <div class="overlay-image-1"
                                 style="background-image: url('https://cdn.shopify.com/s/files/1/0036/7306/3491/files/best-collections.jpg?v=1614331332');">
                             </div>
                             <!-- Common card-containers -->
@@ -394,7 +394,7 @@
                         <!-- card-collection -->
                         <div class="card border-0 card-collection overflow-hidden">
                             <!-- Background overlay-image -->
-                            <div class="overlay-image"
+                            <div class="overlay-image-1"
                                 style="background-image: url('https://cdn.shopify.com/s/files/1/0036/7306/3491/files/awesome-tops.jpg?v=1614331332');">
                             </div>
                             <!-- Common card-containers -->
